# boost-gil-workshop

./: .gitignore  CMakeLists.txt  CMakeSettings.json  channel_invert_bug.cpp  channel_sample.cpp  cie.cpp  configure.bat  indexed_image_raw.cpp  indexed_transparency.cpp  promote_integral.hpp  read_image_pnm.cpp  stitch_image_tiles.cpp  test_promote_integral.cpp
boost/gil/extension/io/: gdal_all.hpp
boost/gil/extension/io/formats/gdal/: is_allowed.hpp  read.hpp
boost/gil/extension/io_new/: bmp_read.hpp  gdal_all.hpp  gdal_read.hpp  gdal_tags.hpp  gdal_write.hpp  jpeg_read.hpp  jpeg_tags.hpp  png_read.hpp  png_tags.hpp  pnm_read.hpp  raw_read.hpp  scanline_read_iterator.hpp  targa_io_old.hpp  targa_read.hpp  targa_write.hpp  tiff_read.hpp  tiff_tags.hpp
boost/gil/extension/io_new/detail/: get_write_device.hpp  io_device.hpp  io_error.hpp  path_spec.hpp  read_and_convert_view.hpp  read_image.hpp  read_view.hpp  row_buffer_helper.hpp  typedefs.hpp
boost/gil/extension/io_new/formats/bmp/: read.hpp  reader_backend.hpp  scanline_read.hpp  supported_types.hpp  write.hpp  writer_backend.hpp
boost/gil/extension/io_new/formats/bmp/.svn/: all-wcprops  entries
boost/gil/extension/io_new/formats/bmp/.svn/text-base/: read.hpp.svn-base
boost/gil/extension/io_new/formats/gdal/: device.hpp  is_allowed.hpp  read.hpp  supported_types.hpp  write.hpp
boost/gil/extension/io_new/formats/jpeg/: base.hpp  read.hpp  reader_backend.hpp  scanline_read.hpp  write.hpp  writer_backend.hpp
boost/gil/extension/io_new/formats/jpeg/.svn/: all-wcprops  entries
boost/gil/extension/io_new/formats/png/: base.hpp  read.hpp  reader_backend.hpp  scanline_read.hpp  write.hpp  writer_backend.hpp
boost/gil/extension/io_new/formats/png/.svn/: all-wcprops  entries
boost/gil/extension/io_new/formats/png/.svn/text-base/: write.hpp.svn-base
boost/gil/extension/io_new/formats/pnm/: read.hpp  reader_backend.hpp  scanline_read.hpp  write.hpp  writer_backend.hpp
boost/gil/extension/io_new/formats/pnm/.svn/: all-wcprops  entries
boost/gil/extension/io_new/formats/raw/: device.hpp  read.hpp  reader_backend.hpp
boost/gil/extension/io_new/formats/targa/: read.hpp  reader_backend.hpp  scanline_read.hpp  supported_types.hpp  write.hpp  writer_backend.hpp
boost/gil/extension/io_new/formats/targa/.svn/: all-wcprops  entries
boost/gil/extension/io_new/formats/targa/.svn/text-base/: read.hpp.svn-base
boost/gil/extension/io_new/formats/tiff/: device.hpp  is_allowed.hpp  read.hpp  reader_backend.hpp  scanline_read.hpp  write.hpp  writer_backend.hpp
boost/gil/extension/io_new/formats/tiff/.svn/: all-wcprops  entries
boost/gil/extension/toolbox/: aligned.ppm  border.ppm  channels.ppm  cmyka.hpp  fill.ppm  freegil.ppm  gil_extensions.hpp  layers.ppm  lines1.ppm  lines2.ppm  lines3.ppm  parallel_grid.ppm  pattern.ppm  rgb_algorithms.hpp  rounded.ppm  sections.test1.ppm  sections.test2.ppm  shrink.ppm  test.cpp  wuline.ppm
checksum-bug/: CMakeLists.txt  bgr121.hpp  utility.hpp
checksum-bug/stage0/: CMakeLists.txt  stage0.cpp
checksum-bug/stage1/: CMakeLists.txt  stage1.cpp  stage1_dump1_3x3_opt_x64_clang.txt  stage1_dump2_loop_3x3_opt_x64_msvc.txt  stage1_dump2_step_3x3_opt_x32_msvc.txt
checksum-bug/stage2/: CMakeLists.txt  stage2.cpp
checksum/bug/: .editorconfig  .gitignore  CMakeLists.txt  bit_aligned_pixel.cpp  image_crc.cpp  view_pixel_type.cpp
checksum/bug/dump/: fill_r.txt  make_d.txt  make_r.txt  sample_view_r.txt
checksum/mp11_vs_mpl/: CMakeLists.txt  utility.hpp
checksum/mp11_vs_mpl/gil_mp11/: CMakeLists.txt  CMakeSettings.json  d1.txt  draw_d0_10x10s2_run2_r.txt  draw_d0_10x10s4_run1_d.txt  draw_d0_20x20s10_run1_r.txt  draw_d0_20x20s10_run2_r.txt  draw_d0_20x20s1_run1_r.txt  draw_d0_20x20s2_run1_d.txt  draw_d0_20x20s2_run1_r.txt  draw_d0_20x20s2_run2_r.txt  draw_d0_20x20s3_run1_r.txt  draw_d0_20x20s3_run2_r.txt  draw_d0_20x20s4_run1_r.txt  draw_d0_20x20s4_run2_r.txt  draw_d0_20x20s5_run1_r.txt  draw_d0_20x20s6_run1_r.txt  draw_d0_20x20s6_run2_r.txt  draw_d0_r.txt  draw_d1_10x10s4_run2_r.txt  draw_d2_20x20s4_run1_d.txt  draw_d3_10x10s3_run2_d.txt  draw_d3_20x20s10_run2_d.txt  draw_d4_10x10s10_run2_d.txt  draw_d4_10x10s1_run1_d.txt  draw_d4_10x10s1_run1_r.txt  draw_d4_10x10s2_run1_d.txt  draw_d4_10x10s3_run1_r.txt  draw_d4_10x10s3_run2_d.txt  draw_d4_10x10s4_run1_r.txt  draw_d4_10x10s5_run1_r.txt  draw_d4_10x10s5_run2_d.txt  draw_d4_10x10s6_run2_d.txt  draw_d4_20x20s10_run2_r.txt  draw_d4_20x20s1_run1_r.txt  draw_d4_20x20s1_run2_d.txt  draw_d4_20x20s2_run1_r.txt  draw_d4_20x20s3_run2_r.txt  draw_d4_20x20s5_run2_d.txt  draw_d4_20x20s6_run1_d.txt  (+4 more)
checksum/mp11_vs_mpl/gil_mpl/: CMakeLists.txt  d0.txt  d1.txt  mpl_bgr121_checksum.cpp  mpl_bgr121_pixel.cpp
cmake/: FindGDAL.cmake
crc/: CMakeLists.txt  checksums.txt  checksums_test_x64.txt  checksums_test_x86.txt  clang_sanitize.sh  gcc_sanitize.sh  image_crc.cpp  image_crc_minimal.cpp  minimal_chhenning.cpp  sample_image.cpp  test_boost_crc.cpp
examples/: CMakeLists.txt  gil_pnm.cpp  gil_scanline_read_iterator.cpp  gil_tiff.cpp
gil/extension/io/: gdal_read.hpp
gil/extension/io/formats/gdal/: gdal_tags.hpp  is_allowed.hpp  write.hpp
images/: sample.pbm  sample.ppm
images/osm/2x2/: 0x0_256x256.clr  0x0_256x256.hex  0x1_256x256.clr  0x1_256x256.hex  1x0_256x256.clr  1x0_256x256.hex  1x1_256x256.clr  1x1_256x256.hex
images/osm/4x4/: 0x0_256x256.clr  0x0_256x256.hex  0x1_256x256.clr  0x2_256x256.clr  0x2_256x256.hex  0x3_256x256.clr  0x3_256x256.hex  1x0_256x256.clr  1x0_256x256.hex  1x1_256x256.clr  1x1_256x256.hex  1x2_256x256.clr  1x2_256x256.hex  1x3_256x256.clr  1x3_256x256.hex  2x0_256x256.clr  2x0_256x256.hex  2x1_256x256.clr  2x1_256x256.hex  2x2_256x256.clr  2x2_256x256.hex  2x3_256x256.clr  2x3_256x256.hex  3x0_256x256.clr  3x0_256x256.hex  3x1_256x256.clr  3x1_256x256.hex  3x2_256x256.clr  3x2_256x256.hex  3x3_256x256.clr  3x3_256x256.hex
test/: CMakeLists.txt  gil_gdal_histogram.cpp  gil_gdal_test.cpp  gil_pnm_test.cpp  gil_reader_iterator_test.cpp
(+1 files in other folders)
